force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Batch_Duplex_Printing__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Duplex_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Configure whether large batch file should accommodate duplex printing</description>
    <inlineHelpText>Start each new letter within batch on the odd page number. May create blank pages.</inlineHelpText>
    <label>Batch Duplex Printing</label>
    <type>Checkbox</type>
</CustomField>