force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__External_Access__c.field-meta.xml
<CustomField>
    <fullName>BGBL__External_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the generated letter files will be shared with external users.</description>
    <inlineHelpText>Check if you want to share the generated letter files with external users.</inlineHelpText>
    <label>External Access</label>
    <type>Checkbox</type>
</CustomField>