force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Merge_Template__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Merge_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Template</label>
    <referenceTo>BGBL__Merge_Template__c</referenceTo>
    <relationshipLabel>Letters</relationshipLabel>
    <relationshipName>Batch_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>