force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Output_Type__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Output_Type__c</fullName>
    <label>Output Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Word 2003 or earlier (.doc)</fullName>
            </value>
            <value>
                <fullName>Word 2007 (.docx)</fullName>
            </value>
            <value>
                <fullName>Acrobat (.pdf)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>