force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Output_Type_Short__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Output_Type_Short__c</fullName>
    <formula>IF(ispickval( BGBL__Output_Type__c ,&quot;Acrobat (.pdf)&quot;), &quot;pdf&quot;,&quot;&quot;) + 
IF(ispickval( BGBL__Output_Type__c ,&quot;Word 2003 or earlier (.doc)&quot;), &quot;doc&quot;,&quot;&quot;) +
IF(ispickval( BGBL__Output_Type__c ,&quot;Word 2007 (.docx)&quot;), &quot;docx&quot;,&quot;&quot;)</formula>
    <label>Output Type (short)</label>
    <type>Text</type>
</CustomField>