force-app/main/default/objects/BGBL__Batch_Letter__c/fields/BGBL__Trigger_Only__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Trigger_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If not set, letter is available for back and front end use</description>
    <inlineHelpText>Set if you do not want the letter to show in letter request pages</inlineHelpText>
    <label>Trigger Only</label>
    <type>Checkbox</type>
</CustomField>