force-app/main/default/objects/BGBL__Batch_Letter__c/listViews/BGBL__All.listView-meta.xml
<ListView>
    <fullName>BGBL__All</fullName>
    <columns>NAME</columns>
    <columns>BGBL__Merge_Template__c</columns>
    <columns>BGBL__Output_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>